--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="colorWhite">#f5f5f5</color>
     <color name="colorYellow">#fbc02d</color>
+    <color name="colorGray">#37474f</color>
 </resources>
