--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,9 +34,9 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="10dp"
             android:background="@color/colorPrimary"
             tools:context=".registration.UserRegistrationActivity">
 
@@ -48,11 +48,13 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="24dp"
+                android:layout_marginBottom="24dp"
                 android:background="@drawable/roundshape_white_bg"
                 android:padding="10dp"
                 android:text="@string/give_rent"
                 android:textAlignment="center"
                 android:textSize="24sp"
+                app:layout_constraintBottom_toTopOf="@+id/tv_take_rent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -65,26 +67,12 @@
                 android:layout_marginTop="16dp"
                 android:background="@drawable/roundshape_white_bg"
                 android:padding="10dp"
+                android:text="@string/take_rent"
                 android:textAlignment="center"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="@+id/tv_give_rent"
                 app:layout_constraintStart_toStartOf="@+id/tv_give_rent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_give_rent"
-                android:text="@string/take_rent" />
-
-            <Button
-                android:id="@+id/button_rent_type_go"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:background="@drawable/roundshape_yellow_bg"
-                android:padding="10dp"
-                android:text="@string/go"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/tv_coming_soon"
-                app:layout_constraintStart_toStartOf="@+id/tv_coming_soon"
-                app:layout_constraintTop_toBottomOf="@+id/tv_coming_soon" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_give_rent" />
 
 
             <TextView
