--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="colorWhite">#f5f5f5</color>
     <color name="colorYellow">#fbc02d</color>
     <color name="colorGray">#37474f</color>
+
+    <color name="colorRed">#F44336</color>
+    <color name="colorGreen">#4CAF50</color>
 </resources>
