--- a/app/src/main/res/layout/fragment_ads_form3.xml
+++ b/app/src/main/res/layout/fragment_ads_form3.xml
@@ -21,8 +21,8 @@
             android:showText="true"
             android:text="@string/cleaning_service"
             android:textColor="#000000"
-            android:textOff="YEs"
-            android:textOn="No"
+            android:textOff="NO"
+            android:textOn="YES"
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track"
             android:textSize="20sp"
@@ -41,8 +41,8 @@
             android:showText="true"
             android:text="@string/generator"
             android:textColor="#000000"
-            android:textOff="YEs"
-            android:textOn="No"
+            android:textOff="NO"
+            android:textOn="YES"
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track"
             android:textSize="20sp"
@@ -62,8 +62,8 @@
             android:showText="true"
             android:text="@string/security"
             android:textColor="#000000"
-            android:textOff="YEs"
-            android:textOn="No"
+            android:textOff="NO"
+            android:textOn="YES"
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track"
             android:textSize="20sp"
@@ -102,8 +102,8 @@
             android:showText="true"
             android:text="@string/wifi"
             android:textColor="#000000"
-            android:textOff="YEs"
-            android:textOn="No"
+            android:textOff="NO"
+            android:textOn="YES"
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track"
             android:textSize="20sp"
@@ -124,8 +124,8 @@
             android:showText="true"
             android:text="@string/lift"
             android:textColor="#000000"
-            android:textOff="YEs"
-            android:textOn="No"
+            android:textOff="NO"
+            android:textOn="YES"
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track"
             android:textSize="20sp"
