--- a/app/src/main/res/layout/fragment_ads_from1.xml
+++ b/app/src/main/res/layout/fragment_ads_from1.xml
@@ -56,6 +56,70 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <GridLayout
+            android:id="@+id/gridLayout"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="24dp"
+            android:alignmentMode="alignMargins"
+            android:columnCount="5"
+            android:columnOrderPreserved="false"
+            android:padding="10dp"
+            android:rowCount="1"
+            app:layout_constraintEnd_toEndOf="@+id/button3"
+            app:layout_constraintStart_toStartOf="@+id/button3"
+            app:layout_constraintTop_toBottomOf="@+id/button3">
+
+
+            <com.zolad.zoominimageview.ZoomInImageView
+                android:id="@+id/zoom_image_1"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:padding="5dp"
+                android:src="@drawable/home_c" />
+
+            <com.zolad.zoominimageview.ZoomInImageView
+                android:id="@+id/zoom_image_2"
+
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:padding="5dp"
+                android:src="@drawable/home_c" />
+
+            <com.zolad.zoominimageview.ZoomInImageView
+                android:id="@+id/zoom_image_3"
+
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:padding="5dp"
+                android:src="@drawable/home_c" />
+
+            <com.zolad.zoominimageview.ZoomInImageView
+                android:id="@+id/zoom_image_4"
+
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:padding="5dp"
+                android:src="@drawable/home_c" />
+
+            <com.zolad.zoominimageview.ZoomInImageView
+                android:id="@+id/zoom_image_5"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:padding="5dp"
+                android:src="@drawable/home_c" />
+
+        </GridLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout4"
@@ -69,6 +133,7 @@
             app:layout_constraintTop_toBottomOf="@+id/gridLayout">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_post_tittle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/write_tittle" />
@@ -86,6 +151,7 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_postal_code"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/postal_code" />
@@ -146,6 +212,7 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_post_area"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_area_name" />
