--- a/app/src/main/res/layout/spinner_sampleview.xml
+++ b/app/src/main/res/layout/spinner_sampleview.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:padding="5dp"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
