--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorPrimary"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout18"
@@ -145,11 +144,11 @@
             android:id="@+id/circularImageView"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            app:civ_border_color="@color/colorYellow"
-            app:civ_border_width="2dp"
+            app:civ_border_color="#000000"
+            app:civ_border_width="3dp"
             app:civ_shadow="true"
             app:civ_shadow_color="#000000"
-            app:civ_shadow_radius="2dp"
+            app:civ_shadow_radius="10dp"
             app:layout_constraintEnd_toEndOf="@+id/home_textView"
             app:layout_constraintStart_toStartOf="@+id/home_textView"
             app:layout_constraintTop_toBottomOf="@+id/home_textView"
@@ -159,7 +158,6 @@
             android:id="@+id/home_textView"
             android:layout_width="wrap_content"
             android:layout_height="42dp"
-            android:layout_marginTop="32dp"
             android:text="@string/home_owner_form"
             android:textAlignment="center"
             android:textColor="@color/colorWhite"
@@ -167,15 +165,14 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints" />
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteY="24dp" />
 
         <Button
             android:id="@+id/button_owner_go_next"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:layout_marginBottom="32dp"
             android:background="@drawable/roundshape_yellow_bg"
             android:text="@string/go_next"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -205,4 +202,5 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</ScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
