--- a/app/src/main/res/layout/sampleview_home_post_item.xml
+++ b/app/src/main/res/layout/sampleview_home_post_item.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="15dp"
-    app:cardElevation="5dp"
-    android:layout_margin="5dp"
+    android:id="@+id/linearlayout_sampleview_post_home"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,6 +16,7 @@
             android:id="@+id/zoominimageview_item_photo"
             android:layout_width="0dp"
             android:layout_height="100dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/ambulance_c"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,85 +25,50 @@
         </com.zolad.zoominimageview.ZoomInImageView>
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:padding="5dp"
-            android:text="@string/flat_rent"
-            app:layout_constraintEnd_toEndOf="@+id/barrier"
-            app:layout_constraintStart_toStartOf="@+id/zoominimageview_item_photo"
-            app:layout_constraintTop_toBottomOf="@+id/zoominimageview_item_photo" />
-
-        <androidx.constraintlayout.widget.Barrier
-            android:id="@+id/barrier"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:barrierDirection="right"
-            app:constraint_referenced_ids="textView3"
-            tools:layout_editor_absoluteX="432dp" />
-
-        <TextView
             android:id="@+id/home_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="1 Bed, 2 Bath, 3 Balcony"
-            app:layout_constraintBottom_toBottomOf="@+id/textView3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/barrier"
-            app:layout_constraintTop_toTopOf="@+id/textView3" />
-
-        <androidx.constraintlayout.widget.Barrier
-            android:id="@+id/barrier2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:barrierDirection="bottom"
-            app:constraint_referenced_ids="home_description"
-            tools:layout_editor_absoluteY="864dp" />
-
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:padding="5dp"
-            android:text="@string/rent_from"
-            app:layout_constraintEnd_toStartOf="@+id/tv_home_rent_from"
-            app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toTopOf="@+id/barrier2" />
+            android:text="1 Bed, 2 Bath, 3 Balcony"
+            android:textColor="@android:color/black"
+            app:layout_constraintEnd_toEndOf="@+id/zoominimageview_item_photo"
+            app:layout_constraintStart_toStartOf="@+id/zoominimageview_item_photo"
+            app:layout_constraintTop_toBottomOf="@+id/zoominimageview_item_photo" />
 
         <TextView
             android:id="@+id/tv_home_rent_from"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="5dp"
             android:text="March"
             android:textColor="@android:color/holo_blue_dark"
-            app:layout_constraintBottom_toBottomOf="@+id/textView12"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/barrier"
-            app:layout_constraintTop_toTopOf="@+id/textView12" />
-
-        <androidx.constraintlayout.widget.Barrier
-            android:id="@+id/barrier3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:barrierDirection="bottom"
-            app:constraint_referenced_ids="tv_home_rent_from"
-            tools:layout_editor_absoluteY="864dp" />
+            app:layout_constraintBottom_toBottomOf="@+id/textView3"
+            app:layout_constraintEnd_toEndOf="@+id/home_description"
+            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintTop_toTopOf="@+id/textView3" />
 
         <TextView
             android:id="@+id/tv_home_rent_price"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:padding="5dp"
             android:text="12000 TK/Month"
+            android:textColor="@android:color/black"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textView12"
-            app:layout_constraintTop_toTopOf="@+id/barrier3" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/tv_home_rent_from" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="@string/rent_from"
+            android:textColor="@android:color/black"
+            app:layout_constraintStart_toStartOf="@+id/home_description"
+            app:layout_constraintTop_toBottomOf="@+id/home_description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</LinearLayout>
