--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,206 +1,230 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context=".fragments.CategoryFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout18"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/roundshape_white_bg"
-            android:padding="5dp"
-            app:layout_constraintEnd_toEndOf="@+id/textInputLayout17"
-            app:layout_constraintStart_toStartOf="@+id/textInputLayout17"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout17">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_owner_address"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:hint="@string/address" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout17"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/roundshape_white_bg"
-            android:padding="5dp"
-            app:layout_constraintEnd_toEndOf="@+id/textInputLayout16"
-            app:layout_constraintStart_toStartOf="@+id/textInputLayout16"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout16">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_owner_profession"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/profession" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout16"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/roundshape_white_bg"
-            android:padding="5dp"
-            app:layout_constraintEnd_toEndOf="@+id/textInputLayout15"
-            app:layout_constraintStart_toStartOf="@+id/textInputLayout15"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout15">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_owner_postal_code"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/postal_code" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout15"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/roundshape_white_bg"
-            android:padding="5dp"
-            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
-            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_owner_area"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_area_name" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/roundshape_white_bg"
-            app:layout_constraintEnd_toEndOf="@+id/textInputLayout13"
-            app:layout_constraintStart_toStartOf="@+id/textInputLayout13"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout13">
-
-
-            <androidx.appcompat.widget.AppCompatSpinner
-                android:id="@+id/spinner_division"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout19"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/roundshape_white_bg"
-            android:padding="5dp"
-            app:layout_constraintEnd_toEndOf="@+id/textInputLayout18"
-            app:layout_constraintStart_toStartOf="@+id/textInputLayout18"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout18">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_owner_holding_no"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/holding_no" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout13"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/roundshape_white_bg"
-            android:padding="5dp"
-            app:layout_constraintEnd_toEndOf="@+id/textInputLayout12"
-            app:layout_constraintStart_toStartOf="@+id/textInputLayout12"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout12">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_owner_mobile_no"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/mobile_no" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:src="@drawable/icon_profile"
-            android:id="@+id/circularImageView"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            app:civ_border_color="#000000"
-            app:civ_border_width="3dp"
-            app:civ_shadow="true"
-            app:civ_shadow_color="#000000"
-            app:civ_shadow_radius="10dp"
-            app:layout_constraintEnd_toEndOf="@+id/home_textView"
-            app:layout_constraintStart_toStartOf="@+id/home_textView"
-            app:layout_constraintTop_toBottomOf="@+id/home_textView"
-            tools:ignore="MissingConstraints" />
 
         <TextView
-            android:id="@+id/home_textView"
+            android:id="@+id/tv_investor"
             android:layout_width="wrap_content"
-            android:layout_height="42dp"
-            android:text="@string/home_owner_form"
-            android:textAlignment="center"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="@string/inves_tors"
             android:textColor="@color/colorWhite"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="24dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/button_owner_go_next"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/roundshape_yellow_bg"
-            android:text="@string/go_next"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/textInputLayout19"
-            app:layout_constraintStart_toStartOf="@+id/textInputLayout19"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout19" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout12"
+        <GridLayout
+            android:id="@+id/gridLayout4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/roundshape_white_bg"
-            android:padding="5dp"
+            android:layout_marginTop="16dp"
+            android:alignmentMode="alignMargins"
+            android:columnCount="2"
+            android:columnOrderPreserved="false"
+            android:padding="20dp"
+            android:rowCount="2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/circularImageView">
+            app:layout_constraintTop_toBottomOf="@id/tv_investor">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_owner_name"
-                android:layout_width="match_parent"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_home"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/owner_name" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="12dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="6dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/home_c"></ImageView>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@string/card_home"
+                        android:textAlignment="center"
+                        android:textColor="#000000"
+                        android:textSize="18sp">
+
+                    </TextView>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_mess"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="12dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="6dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/mess_c"></ImageView>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@string/card_mess"
+                        android:textAlignment="center"
+                        android:textColor="#000000"
+                        android:textSize="18sp">
+
+                    </TextView>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_car"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="12dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="6dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/restaurant_c"></ImageView>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@string/card_restaurant"
+                        android:textAlignment="center"
+                        android:textColor="#000000"
+                        android:textSize="18sp">
+
+                    </TextView>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_hotel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="12dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="6dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:src="@drawable/plus"></ImageView>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@string/cate_gories"
+                        android:textAlignment="center"
+                        android:textColor="#000000"
+                        android:textSize="18sp">
+
+                    </TextView>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_truck"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="12dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="6dp" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_restaurant"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_margin="12dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="6dp" />
+
+
+        </GridLayout>
+
+        <EditText
+            android:id="@+id/et_investors"
+            android:layout_width="353dp"
+            android:layout_height="131dp"
+            android:background="@drawable/roundshape_white_bg"
+            android:ems="10"
+            android:gravity="start|top"
+            android:inputType="textMultiLine"
+            android:padding="10dp"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/gridLayout4"
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout4"
+            tools:text="@string/connection" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
